File Name: CHANGES

02/27/2013 FASP 1.2.3:
- Add an intial version of cmake.
- Remove the origianl make and scons.
- Update online documention, README, etc according to cmake.
- Update cmake with several options: shared, openmp, verbose, etc.
- Add interface to MUMPS.
- Update interface function names.

02/23/2013 FASP 1.2.2:
- Prepare to switch from make to cmake.
- Add check for NAN.
- Add a safe-net for coarse level iterative solver.
- Remove non-standard examples from test.c.
- Fix and test DEBUG build in VS08.

02/21/2013 FASP 1.2.1:
- Add monolithic AMG for system of PDEs.
- Fix a bug in the Makefile inside the "test/" dir.
- Modify push2sf.sh.
- Change smoother names: GS -> SMOOTHER_GS, etc.
- Modify coarse level solver definition according to a bug report for fasp4blkoil.
- Change preprocessor: "With_DISOLVE" -> "WITH_DISOLVE", etc to be consistent with VS08.
- Some small changes with variable names.
- Remove some unnecessary parts in Makefile.
- Add a top level Makefile for cleanup and backup.

02/02/2013 FASP 1.2.0:
- Fix the bug in Windows: MINRES wrong in release version; remove /ffast option.
- Revise Makefile's.
- Update Documentation.
- Available online now.
- A public version is available online at fasp.sf.net.
- Update the webpage.

01/19/2013 FASP 1.1.8:
- Modify Windows VS08 compiler options.
- Add a test problem for testing (block) AMGs.
- Find a bug in Windows: MINRES gives wrong results in release version.
- Find a bug in VGMRES: Might use too big "restart".

01/17/2013 FASP 1.1.7:
- Fix unmatch brackets in OMP version.
- Fix a bunch of bugs when using "long int" as INT-type in AMG and related.
- Fix a bunch of bugs in regression when using "long int". 
- There is a bug in ILU when using "long int". 
- There might be non-matching types in i/o when using "long int".
- Test different optimization parameters for gcc.
- Fix a bug in testfem example.
- Add DIAG_PREF for a couple OMP functions.

01/02/2013 FASP 1.1.6: