@@ -2394,10 +2394,10 @@ void fasp_fwrapper_krylov_amg_ (INT *n,
 
 /*-------- In file: interface_mumps.c --------*/
 
-int fasp_solver_mumps  ( dCSRmat *ptrA,
-                         dvector *b,
-                         dvector *u,
-                         const int print_level);
+int fasp_solver_mumps ( dCSRmat *ptrA,
+                        dvector *b,
+                        dvector *u,
+                        const int print_level);
 
 int fasp_solver_mumps_steps ( dCSRmat *ptrA,
                               dvector *b,
