@@ -18,22 +18,23 @@
 /**
  * \fn void fasp_solver_fmgcycle (AMG_data *mgl, AMG_param *param)
  *
- * \brief Solve Ax=b with non-recursive full multigrid K-cycle 
+ * \brief Solve Ax=b with non-recursive full multigrid K-cycle
  *
  * \param mgl     Pointer to AMG_data data
  * \param param   Pointer to AMG parameters
  *
  * \author Chensong Zhang
  * \date   02/27/2011
- * 
+ *
  * Modified by Chensong Zhang on 06/01/2012: fix a bug when there is only one level.
+ * Modified by Chensong Zhang on 02/27/2013: update direct solvers.
  *
  */
-void fasp_solver_fmgcycle (AMG_data *mgl, 
+void fasp_solver_fmgcycle (AMG_data *mgl,
                            AMG_param *param)
-{    
+{
     const SHORT  maxit = 3; // Max allowed V-cycles in each level
-
+    
     const SHORT  amg_type=param->AMG_type;
     const SHORT  print_level = param->print_level;
     const SHORT  nl = mgl[0].num_levels;
@@ -56,16 +57,16 @@ void fasp_solver_fmgcycle (AMG_data *mgl,
     if (print_level >= PRINT_MOST) printf("FMG_level = %d, ILU_level = %d\n", nl, param->ILU_levels);
     
     // restriction r1 = R*r0
-    switch (amg_type) {    
-        case UA_AMG: 
-            for (l=0;l<nl-1;l++) 
-                fasp_blas_dcsr_mxv_agg(&mgl[l].R, mgl[l].b.val, mgl[l+1].b.val); 
+    switch (amg_type) {
+        case UA_AMG:
+            for (l=0;l<nl-1;l++)
+                fasp_blas_dcsr_mxv_agg(&mgl[l].R, mgl[l].b.val, mgl[l+1].b.val);
             break;
         default:
-            for (l=0;l<nl-1;l++) 
-                fasp_blas_dcsr_mxv(&mgl[l].R, mgl[l].b.val, mgl[l+1].b.val); 
+            for (l=0;l<nl-1;l++)
+                fasp_blas_dcsr_mxv(&mgl[l].R, mgl[l].b.val, mgl[l+1].b.val);
             break;
-    }    
+    }
     
     fasp_dvec_set(mgl[l].A.row, &mgl[l].x, 0.0); // initial guess
     
@@ -89,7 +90,7 @@ void fasp_solver_fmgcycle (AMG_data *mgl,
     
     for ( i=1; i<nl; i++ ) {
         
-        // Coarse Space Solver:    
+        // Coarse Space Solver:
         {
 #if   WITH_MUMPS
             /* use MUMPS direct solver on the coarsest level */
@@ -100,13 +101,13 @@ void fasp_solver_fmgcycle (AMG_data *mgl,
 #elif WITH_SuperLU
             /* use SuperLU direct solver on the coarsest level */
             fasp_solver_superlu(&mgl[nl-1].A, &mgl[nl-1].b, &mgl[nl-1].x, 0);
-#else    
+#else
             /* use default iterative solver on the coarest level */
             fasp_coarse_itsolver(&mgl[nl-1].A, &mgl[nl-1].b, &mgl[nl-1].x, param->tol, print_level);
-#endif 
+#endif
         }
         
-        // Slash part: /-cycle 
+        // Slash part: /-cycle
         {
             --l; // go back to finer level
             
@@ -125,20 +126,20 @@ void fasp_solver_fmgcycle (AMG_data *mgl,
             }
         }
         
-        // initialzie rel error 
-        num_cycle = 0; relerr = BIGREAL; 
+        // initialzie rel error
+        num_cycle = 0; relerr = BIGREAL;
         
         while ( relerr > tol && num_cycle < maxit) {
             
             ++num_cycle;
             
             // form residual r = b - A x
-            fasp_array_cp(mgl[l].A.row, mgl[l].b.val, mgl[l].w.val); 
+            fasp_array_cp(mgl[l].A.row, mgl[l].b.val, mgl[l].w.val);
             fasp_blas_dcsr_aAxpy(-1.0,&mgl[l].A, mgl[l].x.val, mgl[l].w.val);
             relerr = fasp_blas_dvec_norm2(&mgl[l].w) / fasp_blas_dvec_norm2(&mgl[l].b);
             
             // Forward Sweep
-            for ( lvl=0; lvl<i; lvl++ ) { 
+            for ( lvl=0; lvl<i; lvl++ ) {
                 
                 // pre smoothing
                 if (l<param->ILU_levels) {
@@ -155,14 +156,14 @@ void fasp_solver_fmgcycle (AMG_data *mgl,
                             bbgs2ns_(&(mgl[l].schwarz.A.row), mgl[l].schwarz.A.IA, mgl[l].schwarz.A.JA,
                                      mgl[l].schwarz.A.val, mgl[l].x.val, mgl[l].b.val, &(mgl[l].schwarz.nblk),
                                      mgl[l].schwarz.iblock, mgl[l].schwarz.jblock, mgl[l].schwarz.mask,
-                                     mgl[l].schwarz.maxa, mgl[l].schwarz.au, mgl[l].schwarz.al, 
+                                     mgl[l].schwarz.maxa, mgl[l].schwarz.au, mgl[l].schwarz.al,
                                      mgl[l].schwarz.rhsloc, &(mgl[l].schwarz.memt));
                             break;
                         default:
                             fbgs2ns_(&(mgl[l].schwarz.A.row), mgl[l].schwarz.A.IA, mgl[l].schwarz.A.JA,
                                      mgl[l].schwarz.A.val, mgl[l].x.val, mgl[l].b.val, &(mgl[l].schwarz.nblk),
                                      mgl[l].schwarz.iblock, mgl[l].schwarz.jblock, mgl[l].schwarz.mask,
-                                     mgl[l].schwarz.maxa, mgl[l].schwarz.au, mgl[l].schwarz.al, 
+                                     mgl[l].schwarz.maxa, mgl[l].schwarz.au, mgl[l].schwarz.al,
                                      mgl[l].schwarz.rhsloc, &(mgl[l].schwarz.memt));
                             break;
                     }
@@ -174,12 +175,12 @@ void fasp_solver_fmgcycle (AMG_data *mgl,
                 }
                 
                 // form residual r = b - A x
-                fasp_array_cp(mgl[l].A.row, mgl[l].b.val, mgl[l].w.val); 
+                fasp_array_cp(mgl[l].A.row, mgl[l].b.val, mgl[l].w.val);
                 fasp_blas_dcsr_aAxpy(-1.0,&mgl[l].A, mgl[l].x.val, mgl[l].w.val);
                 
                 // restriction r1 = R*r0
-                switch (amg_type) {    
-                    case UA_AMG: 
+                switch (amg_type) {
+                    case UA_AMG:
                         fasp_blas_dcsr_mxv_agg(&mgl[l].R, mgl[l].w.val, mgl[l+1].b.val);
                         break;
                     default:
@@ -187,31 +188,31 @@ void fasp_solver_fmgcycle (AMG_data *mgl,
                         break;
                 }
                 
-                ++l; 
+                ++l;
                 
                 // prepare for the next level
-                fasp_dvec_set(mgl[l].A.row, &mgl[l].x, 0.0);    
+                fasp_dvec_set(mgl[l].A.row, &mgl[l].x, 0.0);
                 
             }    // end for lvl
             
-            // CoarseSpaceSolver:    
+            // CoarseSpaceSolver:
             {
-#if   WITH_DISOLVE /* use Direct.lib in Windows */
-                DIRECT_MUMPS(&mgl[nl-1].A.row, &mgl[nl-1].A.nnz, mgl[nl-1].A.IA, mgl[nl-1].A.JA, 
-                             mgl[nl-1].A.val, mgl[nl-1].b.val, mgl[nl-1].x.val);
+#if   WITH_MUMPS
+                /* use MUMPS direct solver on the coarsest level */
+                fasp_solver_mumps(&mgl[nl-1].A, &mgl[nl-1].b, &mgl[nl-1].x, 0);
 #elif WITH_UMFPACK
                 /* use UMFPACK direct solver on the coarsest level */
-                umfpack(&mgl[nl-1].A, &mgl[nl-1].b, &mgl[nl-1].x, 0);
+                fasp_solver_umfpack(&mgl[nl-1].A, &mgl[nl-1].b, &mgl[nl-1].x, 0);
 #elif WITH_SuperLU
                 /* use SuperLU direct solver on the coarsest level */
-                superlu(&mgl[nl-1].A, &mgl[nl-1].b, &mgl[nl-1].x, 0);
-#else    
+                fasp_solver_superlu(&mgl[nl-1].A, &mgl[nl-1].b, &mgl[nl-1].x, 0);
+#else
                 /* use default iterative solver on the coarest level */
                 fasp_coarse_itsolver(&mgl[nl-1].A, &mgl[nl-1].b, &mgl[nl-1].x, param->tol, print_level);
-#endif 
+#endif
             }
             
-            // Backward Sweep 
+            // Backward Sweep
             for ( lvl=0; lvl<i; lvl++ ) {
                 
                 --l;
@@ -263,7 +264,7 @@ void fasp_solver_fmgcycle (AMG_data *mgl,
                 
                 else {
                     fasp_dcsr_postsmoothing(smoother,&mgl[l].A,&mgl[l].b,&mgl[l].x,param->postsmooth_iter,
-                                            0,mgl[l].A.row-1,-1,relax,ndeg,smooth_order,mgl[l].cfmark.val);    
+                                            0,mgl[l].A.row-1,-1,relax,ndeg,smooth_order,mgl[l].cfmark.val);
                 }
                 
             } // end while
